--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <meta charset="utf-8">
+    <meta charset="utf-8" re>
     <meta name="viewport" content="width=device-width,initial-scale=1,user-scalable=0">
     <title>豆瓣电影</title>
   </head>
